--- a/app/design/frontend/gogomart/default/template/page/html/header.phtml
+++ b/app/design/frontend/gogomart/default/template/page/html/header.phtml
@@ -36,7 +36,7 @@
                     <div class="shop-access"><?php echo $this->getChildHtml('topLinks') ?></div>
                 </div>
                 <?php echo $this->getChildHtml('headerCart') ?>
-                <?php echo $this->getChildHtml('store_language') ?>
+                <?php echo $this->getChildHtml('store_flag') ?>
             </div>
             <div class="header-top">
                 <?php if ($this->getIsHomePage()):?>
