--- a/skin/frontend/gogomart/default/css/styles.css
+++ b/skin/frontend/gogomart/default/css/styles.css
@@ -510,7 +510,7 @@ tr.summary-details-excluded { font-style:italic; }
 .header .form-search .search-autocomplete li .amount { float:right; font-weight:bold; }
 .header .form-search .search-autocomplete li.odd { background-color:#fffefb; }
 .header .form-search .search-autocomplete li.selected { background-color:#f7e8dd; }
-.header .form-language { }
+.header .form-language {margin-top: 5px;}
 .header .form-language label { padding-right:5px; vertical-align:middle; }
 .header .form-language select { padding:0; }
 .header .form-language select.flags option { background-position:4px 50%; background-repeat:no-repeat; padding-left:25px; }
