--- a/skin/frontend/gogomart/default/css/custom.css
+++ b/skin/frontend/gogomart/default/css/custom.css
@@ -14,6 +14,8 @@ a img { border:0;}
 a:hover  img { border:0; text-decoration:none;}
 :focus { outline:0; }
 
+.messages .error-msg a{color:#ff000;}
+
 .fieldset .legend, .fieldset { border:0px; color: #ff51a8;}
 
 .header-top {clear:both;margin:0 auto;position:relative;width:930px;z-index:100;}
@@ -72,7 +74,7 @@ a:hover  img { border:0; text-decoration:none;}
 .shop-access a:hover {color: #FFF;}
 .shop-access li.last { padding-right:0; background:none; }
 
-.form-language { float: left; margin-left: 65px; display: inline; }
+.form-language { float: left; margin-top: 5px; margin-left: 65px; display: inline; }
 .form-language label { color:#ff51a8; padding-right:5px; font-size:11px; }
 .form-language .flag option { background-repeat:no-repeat; background-position:left center; padding-left:20px; margin-left:2px; }
 
@@ -177,7 +179,7 @@ div.sliderdescription:hover,.sliderdescription.active{background-color:#fff !imp
 .block-progress dt {border-bottom:1px dotted #A3AEB3}
 .checkout-review-table-wrapper .data-table, .block-progress dd, .opc .step, .opc .step-title, .opc li.section{border: 0px !important;}
 .account-login .content {border: 0px;}
-.account-login .buttons-set {border: 0px; background: #fff;}
+.account-login .buttons-set {border: 0px;}
 
 button.button {margin:1px;}
 .button span span {display: block; float:left; background:#aeaeae url(../images/btn_bg.gif) repeat-x 0 0; border:1px solid #adadad !important; -moz-border-radius:4px; -webkit-border-radius:4px; -opera-border-radius:4px; margin:0px; vertical-align:top; padding:2px 10px !important; color:#fff;}
