--- a/skin/frontend/gogomart/default/css/styles.css
+++ b/skin/frontend/gogomart/default/css/styles.css
@@ -510,7 +510,7 @@ tr.summary-details-excluded { font-style:italic; }
 .header .form-search .search-autocomplete li .amount { float:right; font-weight:bold; }
 .header .form-search .search-autocomplete li.odd { background-color:#fffefb; }
 .header .form-search .search-autocomplete li.selected { background-color:#f7e8dd; }
-.header .form-language {margin-top: 5px;}
+.header .form-language {}
 .header .form-language label { padding-right:5px; vertical-align:middle; }
 .header .form-language select { padding:0; }
 .header .form-language select.flags option { background-position:4px 50%; background-repeat:no-repeat; padding-left:25px; }
@@ -1441,7 +1441,7 @@ tr.summary-details-excluded { font-style:italic; }
 .account-login .content h2 { font-weight:bold; font-size:13px; margin:0 0 14px; padding:0 0 5px 5px; border-bottom:1px solid #bbb; background-position:0 1px; background-repeat:no-repeat; text-transform:uppercase; color:#e76200; }
 .account-login .new-users h2 { }
 .account-login .registered-users h2 { }
-.account-login .buttons-set { border:1px solid #bbb; margin:0; padding:8px 13px; background:#dee5e8; }
+.account-login .buttons-set { border:1px solid #bbb; margin:0; padding:8px 13px;}
 
 .account-create {}
 /* Account Login/Create Pages ============================================================ */
