--- a/skin/frontend/gogomart/default/css/custom.css
+++ b/skin/frontend/gogomart/default/css/custom.css
@@ -6,6 +6,7 @@ background-image: -o-radial-gradient(center, circle farthest-corner, #B534B3 0%,
 background-image: -webkit-gradient(radial, center center, 0, center center, 510, color-stop(0, #B534B3), color-stop(1, #2F081A));
 background-image: -webkit-radial-gradient(center, circle farthest-corner, #B534B3 0%, #2F081A 100%);
 background-image: radial-gradient(center, circle farthest-corner, #B534B3 0%, #2F081A 100%);
+min-height: 800px;
 }
 
 a { color:#fff; text-decoration: none; }
